# CeCe-plugins

./: .travis.yml  CMakeLists.txt  appveyor.yml
diffusion/: Module.cpp
diffusion-python/wrappers/: Module.cpp
diffusion-streamlines/: Module.cpp
diffusion-streamlines-python/wrappers/: Module.cpp
object-streamlines-generator/: Module.cpp  Module.hpp
resources/: descriptor.json.in
stochastic-reactions/: CMakeLists.txt  Context.hpp  Function.cpp  Function.hpp  Reactions.cpp  Reactions.hpp  ReactionsParser.cpp  ReactionsParser.hpp  UserFunction.cpp  UserFunction.hpp  lang.desc
stochastic-reactions/examples/: Functions.cece
stochastic-reactions/test/: CMakeLists.txt  ReactionsParserTest.cpp  UserFunctionTest.cpp
streamlines/: Boundaries.cpp  Boundaries.hpp  Boundary.cpp  Boundary.hpp  CMakeLists.txt  Converter.cpp  Converter.hpp  Descriptor.cpp  Descriptor.hpp  Dynamics.hpp  ExportModule.cpp  Factory.cpp  Factory.hpp  FactoryManager.cpp  FactoryManager.hpp  Lattice.cpp  Lattice.hpp  Module.cpp  Module.hpp  MovingDynamics.cpp  MovingDynamics.hpp
streamlines-gpu/: CMakeLists.txt  Lattice.cpp  Lattice.hpp  Plugin.cpp  README.md  functions.hpp  library.cpp  library.hpp  program.hpp
streamlines-gpu/CL/: cl.h  cl_platform.h  opencl.h
streamlines-python/wrappers/: Module.cpp
streamlines/cpu/: Lattice.cpp  Lattice.hpp  Node.cpp  Node.hpp
streamlines/gpu/: Lattice.cpp  Lattice.hpp  program.hpp
